--- a/src/client/less/App.less
+++ b/src/client/less/App.less
@@ -10,8 +10,8 @@ body {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
 
-.fail {
-    border: 1px solid var(--failColor);
+    .fail {
+        border: 2px solid var(--fail-color, red);
+    }
 }
