--- a/src/client/less/Login.less
+++ b/src/client/less/Login.less
@@ -43,7 +43,8 @@
             cursor: pointer;
         }
 
-        .forgotPassword {
+        .forgotPassword,
+        .backToLogin {
             display: block;
             padding: 5px;
             float: right;
