--- a/src/client/less/App.less
+++ b/src/client/less/App.less
@@ -1,3 +1,5 @@
+@import "variables";
+
 html,
 body {
     height: 100%;
@@ -12,6 +14,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 
     .fail {
-        border: 2px solid var(--fail-color, red);
+        border: 2px solid var(--fail-color, @failColor);
+    }
+
+    .success {
+        border: 2px solid var(--success-color, @successColor);
     }
 }
