finalize password reset

--- a/src/client/less/Login.less
+++ b/src/client/less/Login.less
@@ -42,7 +42,8 @@
     .buttons {
         text-align: right;
 
-        .loginButton {
+        .loginButton,
+        .setPasswordButton {
             width: auto;
             padding: 5px;
             float: left;
