--- a/src/client/less/variables.less
+++ b/src/client/less/variables.less
@@ -1,4 +1,13 @@
 @successColor: #28a745;
+@warningColor: #ffc107;
 @failColor: #dc3545;
+@infoColor: #17a2b8;
+@primaryColor: #007bff;
+@secondaryColor: #6c757d;
+@green: darken(lightgreen, 30%);
 @white: #ffffff;
+@light: #f8f9fa;
+@gray: gray;
+@dusk: mix(@light, @dark, 50%);
+@dark: #343a40;
 @black: #000000;
