--- a/src/client/less/Login.less
+++ b/src/client/less/Login.less
@@ -7,6 +7,7 @@
     transform: translate(-50%, -50%);
 
     width: 40%;
+    max-width: 400px;
     padding: 20px;
 
     background-color: var(--secondary-background-color, @dusk);
@@ -22,6 +23,11 @@
         margin: 10px 0;
         border-radius: 3px;
         border: 1px solid gray;
+        user-select: none;
+        outline: none;
+        &:focus {
+            border: 1px solid @primaryColor;
+        }
     }
 
     .hintBox {
