first admin panel styling

--- a/src/client/less/App.less
+++ b/src/client/less/App.less
@@ -6,6 +6,8 @@ body {
     width: 100%;
     overflow: hidden;
     background-color: @light;
+    margin: 0;
+    padding: 0;
 }
 
 #app {
@@ -13,6 +15,7 @@ body {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    height: 100%;
 
     .fail {
         border: 2px solid var(--fail-color, @failColor);
