--- a/src/client/less/variables.less
+++ b/src/client/less/variables.less
@@ -8,6 +8,6 @@
 @white: #ffffff;
 @light: #f8f9fa;
 @gray: gray;
-@dusk: mix(@light, @dark, 50%);
+@dusk: mix(@gray, @dark, 50%);
 @dark: #343a40;
 @black: #000000;
