fix failing mail transport

--- a/src/server/templates/email/de-de/resetPassword.njk
+++ b/src/server/templates/email/de-de/resetPassword.njk
@@ -1,5 +1,5 @@
-Hallo {{ nickname }},<br />
-
+Hallo {{ user.nickname }},<br />
+<br />
 bei uns ist eine Anfrage zum Zurücksetzen Deines Passwortes eingegangen.<br />
 Du kannst folgenden Link nutzen um Dein Passwort zurückzusetzen:<br />
 <br />
