--- a/src/client/less/Login.less
+++ b/src/client/less/Login.less
@@ -13,6 +13,12 @@
     background-color: var(--secondary-background-color, @dusk);
     border-radius: 3px;
 
+    .welcomeBox {
+        font-size: 24px;
+        color: var(--white-color, @white);
+        font-weight: bold;
+        text-align: center;
+    }
     .email,
     .password,
     .hintBox {
