first implementation of registration

--- a/src/client/less/Button.less
+++ b/src/client/less/Button.less
@@ -3,6 +3,8 @@
 .button {
     @height: 50px;
 
+    background-color: var(--background-color, "none");
+
     &:hover {
         background-color: var(--hover-color, @dusk);
         cursor: pointer;
