--- a/src/client/less/AddUsers.less
+++ b/src/client/less/AddUsers.less
@@ -3,38 +3,104 @@
 .addUsers {
     height: 100%;
 
-    @gridTemplate: 1fr 1fr 100px;
+    @gridTemplate: 1fr 1fr 1fr 1fr 100px 100px 100px;
+    @gridTemplateAreas: "email nickname firstName lastName isAdmin isConfirmed isActive";
+
+    header {
+        display: grid;
+        grid-template-columns: 250px 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas:
+            "headline ."
+            "headline buttons"
+            "headline .";
+        white-space: nowrap;
+        height: 68px;
+
+        h2 {
+            grid-area: headline;
+            box-sizing: border-box;
+            width: calc(100% - 60px);
+        }
+        .buttons {
+            grid-area: buttons;
+            line-height: 68px;
+            text-align: right;
+
+            > * {
+                float: right;
+                --button-height: 30px;
+                --button-width: 30px;
+                --hover-color: var(--primary-color, @primaryColor);
+                --background-color: var(--info-color, @infoColor);
+                color: var(--white-color, @white);
+            }
+        }
+    }
 
     .form {
         display: grid;
         grid-template-columns: @gridTemplate;
-        grid-template-areas: "email matriculationNumber isAdmin";
+        grid-template-areas: @gridTemplateAreas;
+
+        .head {
+            padding: 5px;
+            border: 1px solid var(--gray-color, @gray);
+            font-weight: bold;
+            color: var(--black-color, @black);
+            background-color: var(--white-color, @white);
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
 
         .email {
             grid-area: email;
         }
 
-        .matriculationNumber {
-            grid-area: matriculationNumber;
+        .nickname {
+            grid-area: nickname;
+        }
+
+        .firstName {
+            grid-area: firstName;
+        }
+
+        .lastname {
+            grid-area: lastname;
         }
 
         .isAdmin {
             grid-area: isAdmin;
-            --height: 27px;
+        }
+
+        .isConfirmed {
+            grid-area: isConfirmed;
+        }
+
+        .isActive {
+            grid-area: isActive;
+        }
+
+        .isAdmin,
+        .isConfirmed,
+        .isActive {
+            --height: 25px;
             --width: 100px;
         }
 
         .row {
             display: grid;
             grid-template-columns: @gridTemplate;
-            grid-template-areas: "email matriculationNumber isAdmin";
-            grid-column: auto / span 3;
+            grid-template-areas: @gridTemplateAreas;
+            grid-column: auto / span 7;
 
             .input {
-                border: 1px solid @gray;
+                border: 1px solid var(--gray-color, @gray);
                 user-select: none;
                 outline: none;
                 padding: 5px;
+                width: calc(100% - 10px);
             }
         }
     }
