--- a/src/client/less/Button.less
+++ b/src/client/less/Button.less
@@ -29,6 +29,7 @@
         line-height: var(--button-height, @height);
         text-align: center;
         font-size: var(--button-font-size, 20px);
+        pointer-events: none;
     }
 
     .label {
