--- a/src/client/less/AddUsers.less
+++ b/src/client/less/AddUsers.less
@@ -101,6 +101,28 @@
             --width: 100px;
         }
 
+        .errors {
+            grid-column: auto / span 8;
+            display: grid;
+            grid-template-columns: 25px 1fr;
+
+            .error,
+            .space {
+                border: 1px solid var(--gray-color, @gray);
+                background-color: var(--white-color, @white);
+                font-weight: bold;
+            }
+
+            .space {
+                text-align: center;
+            }
+
+            .error {
+                padding-left: 5px;
+                color: var(--fail-color, @failColor);
+            }
+        }
+
         .row {
             display: grid;
             grid-template-columns: @gridTemplate;
@@ -112,7 +134,7 @@
                 user-select: none;
                 outline: none;
                 padding: 5px;
-                width: calc(100% - 10px);
+                width: calc(100% - 12px);
             }
         }
     }
