attach store and update all components on change. Also add delet user function

--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -27,5 +27,12 @@
             height: @halfHeight;
             line-height: @halfHeight;
         }
+
+        .action {
+            --button-height: 25px;
+            --hover-color: var(--info-color, @infoColor);
+            margin-left: 3px;
+            float: right;
+        }
     }
 }
