--- a/src/client/less/Admin.less
+++ b/src/client/less/Admin.less
@@ -7,6 +7,10 @@
     grid-template-areas: "nav items editor";
     height: 100%;
 
+    * {
+        position: relative;
+    }
+
     header {
         h2 {
             margin-left: 10px;
@@ -101,5 +105,6 @@
         grid-area: editor;
         overflow-y: auto;
         overflow-x: hidden;
+        position: relative;
     }
 }
