--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -19,6 +19,14 @@
         text-align: center;
         line-height: @height;
         font-size: 24px;
+
+        > div {
+            height: 75%;
+            width: 75%;
+            margin: 6px;
+            background-size: cover;
+            background-position: center center;
+        }
     }
 
     .info {
