extend sorting and add clear button

--- a/src/client/less/AddUsers.less
+++ b/src/client/less/AddUsers.less
@@ -60,6 +60,14 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
+
+            &.clear {
+                padding: 0;
+
+                .deleteButton {
+                    border: none;
+                }
+            }
         }
 
         .email {
