--- a/src/client/less/Button.less
+++ b/src/client/less/Button.less
@@ -1,4 +1,5 @@
 @import (less) "variables";
+@import (less) "animations";
 
 .button {
     @height: 50px;
@@ -16,6 +17,22 @@
         &:hover {
             background-color: var(--active-hover-color, @infoColor);
         }
+    }
+
+    &.buttonLoading:after {
+        content: " ";
+        position: absolute;
+        display: block;
+        width: calc(var(--button-height, @height) - 25px);
+        height: calc(var(--button-height, @height) - 25px);
+        margin: 8px;
+        border-radius: 50%;
+        border: 6px solid var(--white-color, @white);
+        border-color: var(--white-color, @white) transparent
+            var(--white-color, @white) transparent;
+        animation: buttonLoading 1.2s linear infinite;
+        top: -2px;
+        left: -2px;
     }
 
     > * {
