--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -46,8 +46,9 @@
             height: 75%;
             width: 75%;
             margin: 6px;
-            background-size: cover;
+            background-size: contain;
             background-position: center center;
+            background-repeat: no-repeat;
         }
     }
 
