--- a/src/client/less/animations.less
+++ b/src/client/less/animations.less
@@ -12,3 +12,12 @@
         left: -100%;
     }
 }
+
+@keyframes buttonLoading {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
