internal DnD into graphic editor

--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -11,6 +11,7 @@
     grid-template-rows: @height;
     grid-template-areas: "avatar info" "avatar info";
     transition: opacity @transitionConfig, background-color @transitionConfig;
+    cursor: pointer;
 
     &:hover {
         background-color: var(--gray-color, @gray);
