--- a/src/client/less/Admin.less
+++ b/src/client/less/Admin.less
@@ -13,6 +13,7 @@
 
     header {
         h2 {
+            font-size: 18px;
             margin-left: 10px;
             color: var(--white-color, @white);
             display: inline-block;
@@ -60,12 +61,13 @@
                 "headline buttons"
                 "headline .";
             white-space: nowrap;
-            height: 68px;
+            height: 50px;
 
             h2 {
                 grid-area: headline;
                 box-sizing: border-box;
                 width: calc(100% - 60px);
+                font-size: 18px;
             }
             .buttons {
                 grid-area: buttons;
@@ -75,8 +77,7 @@
                 .collapseButton,
                 .addButton {
                     float: right;
-                    --button-height: 30px;
-                    --button-width: 30px;
+                    --button-width: 50px;
                     --hover-color: var(--gray-color, @gray);
                 }
                 &.collapsed {
