--- a/src/client/less/GraphicEditor.less
+++ b/src/client/less/GraphicEditor.less
@@ -4,45 +4,19 @@
     background-image: url("~client/assets/transparentBackgroundIndicator.png");
     height: 100%;
 
-    header {
-        display: grid;
-        grid-template-columns: 250px 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-areas:
-            "headline ."
-            "headline buttons"
-            "headline .";
-        white-space: nowrap;
-        height: 68px;
-        background-color: var(--white-color, @white);
+    .canvasWrapper {
+        width: 100%;
+        height: calc(100% - 50px);
+        overflow: hidden;
+        position: relative;
 
-        h2 {
-            grid-area: headline;
-            box-sizing: border-box;
-            width: calc(100% - 60px);
-            margin-left: 10px;
-        }
-        .buttons {
-            grid-area: buttons;
-            line-height: 68px;
-            text-align: right;
+        canvas {
+            background-color: transparent;
 
-            > * {
-                float: right;
-                --button-height: 30px;
-                --button-width: 30px;
-                --hover-color: var(--primary-color, @primaryColor);
-                --background-color: var(--info-color, @infoColor);
-                color: var(--white-color, @white);
+            &[resize] {
+                width: 100%;
+                height: 100%;
             }
         }
-    }
-
-    canvas {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: transparent;
     }
 }
