reactivate messages on file upload and style info toaster

--- a/src/client/less/common.less
+++ b/src/client/less/common.less
@@ -17,6 +17,6 @@
     background: var(--success-color, @successColor) !important;
 }
 
-.abortToaster {
+.infoToaster {
     background: var(--info-color, @infoColor) !important;
 }
