make requisites removable

--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -7,6 +7,10 @@
 
     display: grid;
     border-bottom: 1px solid var(--gray-color, @gray);
+
+    content-visibility: auto;
+    contain-intrinsic-size: 345px 52px;
+
     grid-template-columns: @height 1fr;
     grid-template-rows: @height;
     grid-template-areas: "avatar info" "avatar info";
