--- a/src/client/less/EditorHead.less
+++ b/src/client/less/EditorHead.less
@@ -23,6 +23,7 @@ header {
         grid-area: buttons;
         line-height: 50px;
         text-align: right;
+        z-index: 2;
 
         > * {
             float: right;
