--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -19,6 +19,7 @@
             .scene {
                 display: inline-block;
                 position: relative;
+                box-sizing: border-box;
                 background-image: url("~client/assets/transparentBackgroundIndicator.png");
                 cursor: grab;
                 width: calc(20% - 10px);
@@ -30,6 +31,14 @@
                     content: "";
                     float: left;
                     margin-top: 100%; /* initial ratio of 1:1*/
+                }
+
+                &.leftDropTarget {
+                    border-left: 2px solid var(--primary-color, @primaryColor);
+                }
+
+                &.rightDropTarget {
+                    border-right: 2px solid var(--primary-color, @primaryColor);
                 }
 
                 .scenePicture {
