--- a/src/client/less/UserEditor.less
+++ b/src/client/less/UserEditor.less
@@ -35,6 +35,10 @@
                     &:focus {
                         border: 1px solid @primaryColor;
                     }
+
+                    &.fail {
+                        border: 1px solid var(--fail-color, @failColor);
+                    }
                 }
 
                 select {
