--- a/src/client/less/LessonsList.less
+++ b/src/client/less/LessonsList.less
@@ -1,9 +1,23 @@
 .lessonsList {
-    height: 100%;
+    height: calc(100vh - 50px);
+    overflow: auto;
     display: grid;
-    grid-template-columns: repeat(1fr 1fr 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    //grid-auto-rows: 1fr;
 
-    .scene {
-        margin: 3px;
+    .lessonsListItem {
+        margin: 10px;
+    }
+}
+
+@media only screen and (max-width: 1366px) {
+    .lessonsList {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .lessonsList {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
