--- a/src/client/less/LessonsListItem.less
+++ b/src/client/less/LessonsListItem.less
@@ -1,30 +1,67 @@
+@import (less) "variables.less";
+
 .lessonsListItem {
     display: grid;
-    grid-template-columns: 150px 1fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-areas: "avatar text";
+    padding: 10px;
 
-    .avatar {
+    &:hover {
+        background-color: darken(@light, 10%);
+    }
+
+    .avatarWrapper {
         grid-area: avatar;
-        height: 150px;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
+
+        .avatar {
+            display: grid;
+            grid-template-columns: 1fr;
+            position: relative;
+
+            &::before {
+                content: "";
+                float: left;
+                margin-top: 100%; /* initial ratio of 1:1*/
+            }
+
+            .avatarPicture {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+
+                background-position: center center;
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+        }
     }
 
     .text {
         grid-area: text;
-        margin-left: 3px;
+        margin-left: 8px;
+
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: minmax(min-content, max-content);
+
+        .title {
+            margin: 0;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            border-bottom: 1px solid @gray;
+        }
 
         .scenes {
-            padding-left: 5px;
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+
             .scene {
-                display: inline-block;
                 position: relative;
                 box-sizing: border-box;
                 background-image: url("~client/assets/transparentBackgroundIndicator.png");
-                width: calc(20% - 10px);
-                min-width: 150px;
-                max-width: 250px;
                 margin: 5px;
 
                 &::before {
