--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -14,6 +14,17 @@
             border-bottom: 1px solid var(--gray-color, @gray);
         }
 
+        .description {
+            width: calc(100% - 20px);
+            box-sizing: border-box;
+            margin: 0 10px;
+            padding: 5px;
+            border: 1px solid @gray;
+            resize: vertical;
+            outline: none;
+            user-select: none;
+        }
+
         .scenes {
             padding-left: 5px;
             .scene {
