--- a/src/client/less/Player.less
+++ b/src/client/less/Player.less
@@ -1,3 +1,5 @@
+@import (less) "variables.less";
+
 .player {
     height: 100%;
 
@@ -10,6 +12,10 @@
         left: 20px;
         top: 50%;
         transform: translateY(-50%);
+        border-radius: 25px;
+        --background-color: @infoColor;
+        --hover-color: @primaryColor;
+        color: @white;
     }
 
     .inventory {
