--- a/src/client/less/LessonEditor.less
+++ b/src/client/less/LessonEditor.less
@@ -25,9 +25,11 @@
             user-select: none;
         }
 
-        .scenes {
+        .scenes,
+        .inventory {
             padding-left: 5px;
-            .scene {
+            .scene,
+            .inventoryItem {
                 display: inline-block;
                 position: relative;
                 box-sizing: border-box;
@@ -52,7 +54,8 @@
                     border-right: 2px solid var(--primary-color, @primaryColor);
                 }
 
-                .scenePicture {
+                .scenePicture,
+                .itemPicture {
                     position: absolute;
                     top: 0;
                     left: 0;
