--- a/src/client/less/Player.less
+++ b/src/client/less/Player.less
@@ -21,19 +21,39 @@
     .inventory {
         position: absolute;
         left: 50%;
-        bottom: 0;
+        bottom: 10px;
         transform: translateX(-50%);
+        width: fit-content;
         max-width: 100vw;
         overflow-x: auto;
         overflow-y: hidden;
+        border: 1px solid @black;
+        height: 72px;
+        white-space: nowrap;
+
+        &::-webkit-scrollbar {
+            width: 0.15em;
+            height: 0.15em;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: var(--gray-color, @gray);
+        }
 
         .slot {
             position: relative;
+            display: inline-block;
             height: 70px;
             width: 70px;
             background-position: center center;
             background-repeat: no-repeat;
             background-size: contain;
+            border: 1px solid @black;
+            background-color: @white;
+
+            &:hover {
+                background-color: @dusk;
+            }
 
             .amount {
                 position: absolute;
@@ -41,6 +61,11 @@
                 right: 0;
                 height: 25px;
                 width: 25px;
+                line-height: 25px;
+                text-align: center;
+                background-color: @primaryColor;
+                color: @white;
+                border-radius: 25px;
             }
         }
     }
