--- a/src/client/less/Inventory.less
+++ b/src/client/less/Inventory.less
@@ -10,7 +10,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     border: 1px solid @black;
-    height: 72px;
+    height: calc(var(--slot-height, 70px) + 2px);
     white-space: nowrap;
 
     &::-webkit-scrollbar {
@@ -25,8 +25,8 @@
     .slot {
         position: relative;
         display: inline-block;
-        height: 70px;
-        width: 70px;
+        height: var(--slot-height, 70px);
+        width: var(--slot-height, 70px);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: contain;
