--- a/src/client/less/Public.less
+++ b/src/client/less/Public.less
@@ -23,5 +23,13 @@
 
     .main {
         grid-area: main;
+
+        h3 {
+            font-size: 16px;
+            display: block;
+            padding-left: 10px;
+            padding-bottom: 15px;
+            border-bottom: 1px solid var(--gray-color, @gray);
+        }
     }
 }
