--- a/src/client/less/UserEditor.less
+++ b/src/client/less/UserEditor.less
@@ -54,6 +54,33 @@
                 }
             }
 
+            .gameSessionLabel {
+                display: inline-block;
+                background-color: @dusk;
+                border-radius: 100px;
+                color: @white;
+
+                span {
+                    padding: 5px 10px;
+                    padding-right: 5px;
+                    display: inline-block;
+                    vertical-align: middle;
+
+                    &.x {
+                        background-color: @dark;
+                        border-radius: 100px;
+                        margin-right: 5px;
+                        font-size: 10px;
+                        padding: 5px 7px;
+                        cursor: pointer;
+
+                        &:hover {
+                            background-color: @black;
+                        }
+                    }
+                }
+            }
+
             .left {
                 width: 15%;
                 line-height: 45px;
