--- a/src/client/less/Public.less
+++ b/src/client/less/Public.less
@@ -23,7 +23,11 @@
 
     .main {
         grid-area: main;
-        overflow: auto;
+
+        .lessons {
+            height: calc(100vh - 50px);
+            overflow: auto;
+        }
 
         h3 {
             font-size: 16px;
