--- a/src/client/less/UserEditor.less
+++ b/src/client/less/UserEditor.less
@@ -59,6 +59,7 @@
                 background-color: @dusk;
                 border-radius: 100px;
                 color: @white;
+                margin: 5px;
 
                 span {
                     padding: 5px 10px;
