--- a/src/client/less/Item.less
+++ b/src/client/less/Item.less
@@ -73,6 +73,15 @@
                 color: var(--black-color, @black) !important;
             }
         }
+
+        .subObjects {
+            color: @white;
+            .name {
+                input {
+                    color: @white !important;
+                }
+            }
+        }
     }
 
     .expandCollapseButton {
